ui/app/styles/directives.css
/**
 * JBoss, Home of Professional Open Source.
 * Copyright 2014 Red Hat, Inc., and individual contributors
 * as indicated by the @author tags.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * pnc-infinite-select
 */
.pnc-infinite-select {
    width: 100%;
    position: relative;
}

.pnc-infinite-select .dropdown-wrap {
    position: absolute;
    z-index: 99;
    max-height: 120px;
    min-width: 100%;
    overflow-y: scroll;
    background-color: #ffffff;
    border: 1px solid #b6b6b6;
    border-radius: 1px;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    background-clip: padding-box;
}

.pnc-infinite-select .dropdown-list {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.pnc-infinite-select .dropdown-item, .pnc-infinite-select .dropdown-item-empty {
    margin: 0;
    font-size: 12px;
    padding: 2px 5px;
    border-width: 1px 0;
    border-style: solid;
    border-color: transparent;
}

.pnc-infinite-select .dropdown-item-empty {
    color: gray;
    font-style: italic;
}

.pnc-infinite-select .dropdown-item:hover {
    cursor: pointer;
    background-color: #0099d3;
    border-color: #0076b7;
    color: white;
}

.pnc-infinite-select .input-text {
    width: 100%;
}

.list-group-no-bottom-margin {
    margin-bottom: 0px;
    padding-left: 0px;
}

/**
 * pnc-live-log
 */
.log-console {
    font-family: "courier new", monospace;
    margin-top: 1rem;
    height: 330px;
    overflow: auto;
    resize:both;
}

/**
 * pnc-search-field
 */
.search {
    float: right;
    width: 300px;
}

.panel-heading .search {
    margin-top: -5px;
    margin-bottom: -10px;
}

/**
 * my-builds-panel
 */
.build-panel {
    min-height: 539px;
}

.running-build-panel {
    min-height: 71px;
}

.pagination {
    display: inline-block;
    padding-left: 0;
    margin: 2px 0;
    border-radius: 1px;
}


/**
 * pnc-multiple-input
 */
.pnc-multiple-input .btn-select-item {
    float: right;
}
.pnc-multiple-input .input-item {
    width: calc(100% - 50px);
}

/**
 *  pnc-product-version-milestones
 */
.white_text {
	color: white;
}

/**
 * pnc-build-details
 */
 .pnc-build-details {
   min-height: 239px;
 }

/**
 * pnc-page-controls
 */
.pnc-page-controls label,input,.btn,.of-x-pages {
    vertical-align: middle;
}

.pnc-page-controls label {
  margin-bottom: 0;
}

.pnc-page-controls > .form-group {
  margin-right: 1em;
}

.pnc-page-controls .pnc-page-controls-pager input,.of-x-pages {
  margin-right: 0.5rem;
}

.pnc-page-controls .pnc-page-controls-pager input {
  margin-left: 0.5rem;
}

.pnc-page-controls > .pnc-page-controls-size .btn-group.bootstrap-select {
  width: 70px;
}

/**
 * pnc-loading-placeholder
 */
.loading-placeholder {
  display: inline-block;
  background: #eee;
  height: 10px;
  width: 100%;
  position: relative;
  border-radius: 4px;
  overflow: hidden;
}

@keyframes loadingPlaceholder {
  0% {
    left: -200px;
  }
  100% {
    left: 100%;
  }
}

.loading-placeholder:before {
  content: " ";
  display: inline-block;
  height: 10px;
  width: 200px;
  position: absolute;
  top: 0;
  left: -200px;
  background: linear-gradient(to right, #eee 0%, #ddd 50%, #eee 100%);

  animation-duration: 2s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: loadingPlaceholder;
  animation-timing-function: linear;
}

/**
 * pnc-build-records-list
 */
.panel .pnc-build-records-list {
  margin-bottom: 0;
}

.pnc-build-records-list td {
  vertical-align: middle !important;
}

.pnc-build-records-list .push-status, th {
  text-align: center;
}

.combobox-container .dropdown-menu {
  max-height: 300px;
  overflow-y: auto;
}


/**
 * pnc-repository-configuration-combobox
 */
.pnc-repository-configuration-combobox .px-combobox-dropdown > .px-combobox-option a {
  white-space: pre;
}


/**
 * pnc-build-start
 */
.pnc-build-start {
  float: left;
  margin-right: 20px;
}
.pnc-build-start .btn-primary {
  z-index: 3;
}
.pnc-build-start .dropdown-btn {
  min-width: 95px;
}
.pnc-build-start .dropdown-btn.btn-lg {
  min-width: 112px;
}
/* override .dropdown-menu properties */
.pnc-build-start .dropdown-menu {
  right: 0;
  left: auto;
  min-width: 190px;
  padding: 5px 15px;
  margin-bottom: 15px;

  display: block;
}
.pnc-build-start .dropdown-menu hr {
  margin: 5px 0;
}
.pnc-build-start .dropdown-menu .disabled-option {
  cursor: not-allowed;
}
.pnc-build-start .dropdown-menu .disabled-option * {
  pointer-events: none;
  opacity: 0.5;
}

